--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "prisma-todo-client",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
+    "@rebass/forms": "4.0.5",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/rebass": "3.0.4",
+    "apollo-boost": "0.4.4",
+    "emotion-theming": "10.0.14",
+    "graphql": "14.4.2",
+    "graphql-tag": "2.10.1",
     "react": "^16.9.0",
+    "react-apollo": "3.0.1",
     "react-dom": "^16.9.0",
+    "react-loading": "2.0.3",
+    "react-markdown": "4.1.0",
+    "react-mde": "7.6.2",
     "react-scripts": "3.1.1",
-    "typescript": "3.5.3"
+    "rebass": "4.0.5",
+    "typescript": "3.5.3",
+    "typography": "0.16.19",
+    "wouter": "2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
